// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preserves each check-in expression, selected cue and qualitative energy bar > energy -1 1`] = `
"<div aria-label="Energy" className="bar-scale" role="group">
  <button aria-label="Drained" aria-pressed=true className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Drained"
  <button aria-label="Steady" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Steady"
  <button aria-label="Energized" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
    <span className="bar-item__label">
      "Energized""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > energy 0 1`] = `
"<div aria-label="Energy" className="bar-scale" role="group">
  <button aria-label="Drained" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Drained"
  <button aria-label="Steady" aria-pressed=true className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Steady"
  <button aria-label="Energized" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
    <span className="bar-item__label">
      "Energized""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > energy 1 1`] = `
"<div aria-label="Energy" className="bar-scale" role="group">
  <button aria-label="Drained" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Drained"
  <button aria-label="Steady" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Steady"
  <button aria-label="Energized" aria-pressed=true className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
    <span className="bar-item__label">
      "Energized""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > energy null 1`] = `
"<div aria-label="Energy" className="bar-scale" role="group">
  <button aria-label="Drained" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Drained"
  <button aria-label="Steady" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell">
    <span className="bar-item__label">
      "Steady"
  <button aria-label="Energized" aria-pressed=false className="bar-item" type="button">
    <span aria-hidden="true" className="bar-bars">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
      <span className="bar-bars__cell bar-bars__cell--on">
    <span className="bar-item__label">
      "Energized""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > expression thresholds for 6 choices 1`] = `
"<div aria-label="Qualitative choices" className="mood-scale" role="group">
  <button aria-label="entry.expression.0" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "entry.expression.0"
  <button aria-label="entry.expression.1" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.3 16.4 Q12 13.8 15.7 16.4">
    <span className="mood-item__label">
      "entry.expression.1"
  <button aria-label="entry.expression.2" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "entry.expression.2"
  <button aria-label="entry.expression.3" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "entry.expression.3"
  <button aria-label="entry.expression.4" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "entry.expression.4"
  <button aria-label="entry.expression.5" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "entry.expression.5""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > expression thresholds for 11 choices 1`] = `
"<div aria-label="Qualitative choices" className="mood-scale" role="group">
  <button aria-label="entry.expression.0" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "entry.expression.0"
  <button aria-label="entry.expression.1" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.3 16.4 Q12 13.8 15.7 16.4">
    <span className="mood-item__label">
      "entry.expression.1"
  <button aria-label="entry.expression.2" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.3 16.4 Q12 13.8 15.7 16.4">
    <span className="mood-item__label">
      "entry.expression.2"
  <button aria-label="entry.expression.3" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "entry.expression.3"
  <button aria-label="entry.expression.4" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "entry.expression.4"
  <button aria-label="entry.expression.5" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "entry.expression.5"
  <button aria-label="entry.expression.6" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "entry.expression.6"
  <button aria-label="entry.expression.7" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "entry.expression.7"
  <button aria-label="entry.expression.8" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "entry.expression.8"
  <button aria-label="entry.expression.9" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "entry.expression.9"
  <button aria-label="entry.expression.10" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "entry.expression.10""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > mood -0.5 1`] = `
"<div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
  <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "Heavy"
  <button aria-label="Low" aria-pressed=true className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.5 15.4 H15.5">
      <span className="mood-face__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=12 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=12>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span className="mood-item__label">
      "Low"
  <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "Okay"
  <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Good"
  <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Light""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > mood -1 1`] = `
"<div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
  <button aria-label="Heavy" aria-pressed=true className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
      <span className="mood-face__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=12 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=12>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span className="mood-item__label">
      "Heavy"
  <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "Low"
  <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "Okay"
  <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Good"
  <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Light""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > mood 0 1`] = `
"<div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
  <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "Heavy"
  <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "Low"
  <button aria-label="Okay" aria-pressed=true className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
      <span className="mood-face__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=12 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=12>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span className="mood-item__label">
      "Okay"
  <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Good"
  <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Light""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > mood 0.5 1`] = `
"<div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
  <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "Heavy"
  <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "Low"
  <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "Okay"
  <button aria-label="Good" aria-pressed=true className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
      <span className="mood-face__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=12 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=12>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span className="mood-item__label">
      "Good"
  <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Light""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > mood 1 1`] = `
"<div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
  <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "Heavy"
  <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "Low"
  <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "Okay"
  <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Good"
  <button aria-label="Light" aria-pressed=true className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
      <span className="mood-face__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=12 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=12>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span className="mood-item__label">
      "Light""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > mood null 1`] = `
"<div aria-label="How does today feel? Optional — one tap is enough." className="mood-scale" role="group">
  <button aria-label="Heavy" aria-pressed=false className="mood-item" style={"--face":"#cd8f82","--face-soft":"#f7e5e0","--face-strong":"#9c443d"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 7.2 L10.1 8.5">
        <path d="M16.8 7.2 L13.9 8.5">
        <path d="M8 17.6 Q12 12.8 16 17.6">
    <span className="mood-item__label">
      "Heavy"
  <button aria-label="Low" aria-pressed=false className="mood-item" style={"--face":"#e0b3a4","--face-soft":"#f9ede7","--face-strong":"#8f3d36"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 7.7 L10.1 8.7">
        <path d="M16.5 7.7 L13.9 8.7">
        <path d="M8.5 15.4 H15.5">
    <span className="mood-item__label">
      "Low"
  <button aria-label="Okay" aria-pressed=false className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
    <span className="mood-item__label">
      "Okay"
  <button aria-label="Good" aria-pressed=false className="mood-item" style={"--face":"#a9cba4","--face-soft":"#e9f0e7","--face-strong":"#44604a"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.5 8.6 L10.1 7.8">
        <path d="M16.5 8.6 L13.9 7.8">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Good"
  <button aria-label="Light" aria-pressed=false className="mood-item" style={"--face":"#8fb98d","--face-soft":"#e3eee0","--face-strong":"#35704f"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M7.2 8.8 L10.1 7.5">
        <path d="M16.8 8.8 L13.9 7.5">
        <path d="M7.8 13.9 Q12 18.9 16.2 13.9">
    <span className="mood-item__label">
      "Light""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > single neutral expression 1`] = `
"<div aria-label="Single choice" className="mood-scale" role="group">
  <button aria-label="Okay" aria-pressed=true className="mood-item" style={"--face":"#c9c2b2","--face-soft":"#efebe1","--face-strong":"#5c5347"} type="button">
    <span aria-hidden="true" className="mood-face">
      <svg fill="none" height="32" stroke="currentColor" strokeLinecap="round" strokeWidth=2 viewBox="0 0 24 24" width="32">
        <circle cx="12" cy="12" r="9.2">
        <circle cx="8.8" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <circle cx="15.2" cy="10.2" fill="currentColor" r="1.2" stroke="none">
        <path d="M8.3 14.4 Q12 17.6 15.7 14.4">
      <span className="mood-face__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=12 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=12>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span className="mood-item__label">
      "Okay""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > sleep 1 1`] = `
"<div aria-label="How did you sleep? Optional." className="dot-scale" role="group">
  <button aria-label="1 — Rough" aria-pressed=true className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "1"
    <span className="dot-item__label">
      "Rough"
  <button aria-label="2 — Poor" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "2"
    <span className="dot-item__label">
      "Poor"
  <button aria-label="3 — Okay" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "3"
    <span className="dot-item__label">
      "Okay"
  <button aria-label="4 — Good" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "4"
    <span className="dot-item__label">
      "Good"
  <button aria-label="5 — Rested" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "5"
    <span className="dot-item__label">
      "Rested""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > sleep 3 1`] = `
"<div aria-label="How did you sleep? Optional." className="dot-scale" role="group">
  <button aria-label="1 — Rough" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "1"
    <span className="dot-item__label">
      "Rough"
  <button aria-label="2 — Poor" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "2"
    <span className="dot-item__label">
      "Poor"
  <button aria-label="3 — Okay" aria-pressed=true className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "3"
    <span className="dot-item__label">
      "Okay"
  <button aria-label="4 — Good" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "4"
    <span className="dot-item__label">
      "Good"
  <button aria-label="5 — Rested" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "5"
    <span className="dot-item__label">
      "Rested""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > sleep 5 1`] = `
"<div aria-label="How did you sleep? Optional." className="dot-scale" role="group">
  <button aria-label="1 — Rough" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "1"
    <span className="dot-item__label">
      "Rough"
  <button aria-label="2 — Poor" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "2"
    <span className="dot-item__label">
      "Poor"
  <button aria-label="3 — Okay" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "3"
    <span className="dot-item__label">
      "Okay"
  <button aria-label="4 — Good" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "4"
    <span className="dot-item__label">
      "Good"
  <button aria-label="5 — Rested" aria-pressed=true className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "5"
    <span className="dot-item__label">
      "Rested""
`;

exports[`preserves each check-in expression, selected cue and qualitative energy bar > sleep null 1`] = `
"<div aria-label="How did you sleep? Optional." className="dot-scale" role="group">
  <button aria-label="1 — Rough" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "1"
    <span className="dot-item__label">
      "Rough"
  <button aria-label="2 — Poor" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "2"
    <span className="dot-item__label">
      "Poor"
  <button aria-label="3 — Okay" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "3"
    <span className="dot-item__label">
      "Okay"
  <button aria-label="4 — Good" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "4"
    <span className="dot-item__label">
      "Good"
  <button aria-label="5 — Rested" aria-pressed=false className="dot-item" type="button">
    <span aria-hidden="true" className="dot">
      "5"
    <span className="dot-item__label">
      "Rested""
`;

exports[`preserves the public responsive application header, skip link and content landmark 1`] = `
"<a className="skip-link" href="#app-content">
  "Skip to content"
<header className="app-header">
  <h1 className="brand__name" style={"display":"flex","alignItems":"center","gap":10}>
    <svg aria-hidden="true" focusable="false" height=30 viewBox="0 0 32 32" width=30>
      <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
      <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
      <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
      <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
    "Fathom"
  <button className="btn btn--help btn--small" type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <path d="M6 3.5h3l1.5 4-2 1.5a11.5 11.5 0 0 0 5 5l1.5-2 4 1.5v3a2 2 0 0 1-2 2A14 14 0 0 1 4 5.5a2 2 0 0 1 2-2z">
    "Get help"
<main className="app-main" id="app-content">
  <p>
    "Writing view""
`;

exports[`preserves the rendered patient controls, decorative drawings and accessible states > closed controls 1`] = `
"<main>
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M3 11.5 12 4l9 7.5">
    <path d="M5.5 10v10h13V10">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
    <path d="M8 3v18">
    <path d="M11.5 8.5h4">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 3l1.7 4.6L18.3 9l-4.6 1.4L12 15l-1.7-4.6L5.7 9l4.6-1.4L12 3z">
    <path d="M18.5 15l.8 2.2 2.2.8-2.2.8-.8 2.2-.8-2.2-2.2-.8 2.2-.8.8-2.2z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="9">
    <path d="M9.6 9.6a2.4 2.4 0 1 1 3.3 2.2c-.8.34-1.3.95-1.3 1.9">
    <path d="M11.6 16.6v.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M9 4.5H7A1.5 1.5 0 0 0 5.5 6v13A1.5 1.5 0 0 0 7 20.5h10a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 17 4.5h-2">
    <rect height="3" rx="1" width="6" x="9" y="3">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="18" cy="5.5" r="2.4">
    <circle cx="6" cy="12" r="2.4">
    <circle cx="18" cy="18.5" r="2.4">
    <path d="M8.2 10.8l7.6-4.1">
    <path d="M8.2 13.2l7.6 4.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M4 7h7">
    <path d="M16.5 7H20">
    <circle cx="13.5" cy="7" r="2.2">
    <path d="M4 17h3">
    <path d="M12.5 17H20">
    <circle cx="9.5" cy="17" r="2.2">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
    <path d="M9 11.6l2.1 2.1 4-4.2">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 3c1 3 4.2 4.6 4.2 8.2a4.7 4.7 0 0 1-9.4 0c0-1.6.6-3 1.5-4.2.4 1 1.1 1.6 2 1.8C10.4 7 11.5 5 12 3z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="4">
    <path d="M12 2.5V5">
    <path d="M12 19v2.5">
    <path d="M2.5 12H5">
    <path d="M19 12h2.5">
    <path d="M5 5l1.7 1.7">
    <path d="M17.3 17.3 19 19">
    <path d="M19 5l-1.7 1.7">
    <path d="M6.7 17.3 5 19">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M20 13.6A8 8 0 1 1 10.4 4a6.6 6.6 0 0 0 9.6 9.6z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M14.5 5.5 8 12l6.5 6.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M9.5 5.5 16 12l-6.5 6.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6 9.5l6 6 6-6">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M5 12.5l4.5 4.5L19 7.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6 6l12 12">
    <path d="M18 6 6 18">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 4 2.8 20h18.4z">
    <path d="M12 10v4.2">
    <path d="M12 17.4v.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="9">
    <path d="M12 11.2V16">
    <path d="M12 8.2v.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <rect height="10.5" rx="2" width="10.5" x="9" y="9">
    <path d="M6.5 15H5.5A1.5 1.5 0 0 1 4 13.5v-8A1.5 1.5 0 0 1 5.5 4h8A1.5 1.5 0 0 1 15 5.5v1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
    <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
    <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M9.5 4H6a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h3.5">
    <path d="M15.5 8l4 4-4 4">
    <path d="M19.5 12h-10">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M4 20h4.5L20 8.5a2.12 2.12 0 0 0-3-3L5.5 17 4 20z">
    <path d="M14.5 7l3 3">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M4.5 7h15">
    <path d="M9.5 7V4.5h5V7">
    <path d="M7 7l1 13h8l1-13">
    <path d="M10.3 10.5v6">
    <path d="M13.7 10.5v6">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="11" cy="11" r="6.5">
    <path d="M15.8 15.8 21 21">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M20 12a8 8 0 1 1-2.34-5.66">
    <path d="M20 4v4.5h-4.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6 3.5h3l1.5 4-2 1.5a11.5 11.5 0 0 0 5 5l1.5-2 4 1.5v3a2 2 0 0 1-2 2A14 14 0 0 1 4 5.5a2 2 0 0 1 2-2z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <rect height="11" rx="3" width="6" x="9" y="3">
    <path d="M5.5 11.5a6.5 6.5 0 0 0 13 0">
    <path d="M12 18v3">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="9">
    <path d="M10 8.5l6 3.5-6 3.5z">
  <svg aria-hidden="true" fill="none" focusable="false" height=27 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=27>
    <path d="M3 11.5 12 4l9 7.5">
    <path d="M5.5 10v10h13V10">
  <svg aria-hidden="true" focusable="false" height=30 viewBox="0 0 32 32" width=30>
    <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
    <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
    <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
    <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
  <svg aria-hidden="true" focusable="false" height=42 viewBox="0 0 32 32" width=42>
    <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
    <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
    <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
    <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
  <button className="btn" disabled=false type="button">
    "Save"
  <button className="btn btn--danger btn--small btn--block" disabled=false type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <path d="M4.5 7h15">
      <path d="M9.5 7V4.5h5V7">
      <path d="M7 7l1 13h8l1-13">
      <path d="M10.3 10.5v6">
      <path d="M13.7 10.5v6">
    "Remove"
  <button className="btn btn--ghost" disabled=false type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=17 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=17>
      <path d="M14.5 5.5 8 12l6.5 6.5">
    "Back"
  <button className="btn btn--quiet" disabled=true type="button">
    "Wait"
  <button aria-pressed=true className="chip" disabled=false type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <circle cx="12" cy="12" r="4">
      <path d="M12 2.5V5">
      <path d="M12 19v2.5">
      <path d="M2.5 12H5">
      <path d="M19 12h2.5">
      <path d="M5 5l1.7 1.7">
      <path d="M17.3 17.3 19 19">
      <path d="M19 5l-1.7 1.7">
      <path d="M6.7 17.3 5 19">
    "Walking"
    <span className="chip__check">
      <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
        <path d="M5 12.5l4.5 4.5L19 7.5">
  <button aria-pressed=false className="chip" disabled=true type="button">
    "Rest"
    <span className="chip__check">
      <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
        <path d="M5 12.5l4.5 4.5L19 7.5">
  <button className="chip" disabled=false type="button">
    "Insert prompt"
  <section className="card">
    <h2 className="card__title">
      "Ordinary"
    <p>
      "Body"
  <section className="card card--deep card--sensitive">
    <h2 className="card__title">
      "Private"
    <p>
      "Private writing"
  <section className="card card--danger">
    <p>
      "Remove account"
  <label className="field">
    <span className="field__label">
      "Name"
    <input className="input" type="text" value="Alice">
  <label className="field">
    <span className="field__label">
      "Password"
    <input autoComplete="current-password" className="input" placeholder="Password" type="password" value="secret">
  <label className="field">
    <span className="field__label">
      "Journal"
    <textarea className="textarea" rows=8 value="Two\\\\nlines">
  <label className="field">
    <span className="field__label">
      "Plan"
    <textarea className="textarea" disabled=true maxLength=200 placeholder="Start here" rows=4 value="Plan text">
  <p className="note" style={"whiteSpace":"pre-wrap"}>
    "Ordinary"
  <p className="note note--muted" role="status" style={"whiteSpace":"pre-wrap"}>
    "muted"
  <p className="note note--ok" role="status" style={"whiteSpace":"pre-wrap"}>
    "ok"
  <p className="note note--danger" role="status" style={"whiteSpace":"pre-wrap"}>
    "danger"
  <p className="note note--warn" role="status" style={"whiteSpace":"pre-wrap"}>
    "warn"
  <p className="note note--lead" role="status" style={"whiteSpace":"pre-wrap"}>
    "lead"
  <span className="pill-note">
    "Plain"
  <span className="pill-note pill-note--ok" role="status">
    <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
      <path d="M5 12.5l4.5 4.5L19 7.5">
    "Saved"
  <span className="pill-note pill-note--warn">
    <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
      <path d="M12 4 2.8 20h18.4z">
      <path d="M12 10v4.2">
      <path d="M12 17.4v.1">
    "Queued"
  <span className="pill-note">
    "Muted"
  <div className="row row--between">
    <span className="note" style={"whiteSpace":"pre-wrap"}>
      "Consent on"
    <button aria-checked=true aria-label="Consent on" className="toggle" disabled=false role="switch" type="button">
  <div className="row row--between">
    <span className="note" style={"whiteSpace":"pre-wrap"}>
      "Consent off"
    <button aria-checked=false aria-label="Consent off" className="toggle" disabled=false role="switch" type="button">
  <div className="row row--between">
    <span className="note" style={"whiteSpace":"pre-wrap"}>
      "Unavailable"
    <button aria-checked=true aria-label="Unavailable" className="toggle" disabled=true role="switch" type="button">
  <label className="checkbox">
    <input checked=true className="checkbox__input" type="checkbox">
    <span aria-hidden="true" className="checkbox__box">
      <span className="checkbox__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span>
      "Agreed"
  <label className="checkbox">
    <input checked=false className="checkbox__input" type="checkbox">
    <span aria-hidden="true" className="checkbox__box">
      <span className="checkbox__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span>
      "Unselected"
  <div aria-label="Language" className="segmented" role="radiogroup">
    <button aria-checked=false className="segmented__opt" role="radio" tabIndex=-1 type="button">
      "English"
    <button aria-checked=true className="segmented__opt" role="radio" tabIndex=0 type="button">
      "Español"
  <nav aria-label="Main navigation" className="nav-tabs">
    <button className="nav-tabs__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M3 11.5 12 4l9 7.5">
        <path d="M5.5 10v10h13V10">
      "Today"
    <button aria-current="page" className="nav-tabs__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
      "History"
  <nav aria-label="Main navigation" className="bottom-nav">
    <button aria-current="page" className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M3 11.5 12 4l9 7.5">
        <path d="M5.5 10v10h13V10">
      "Today"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
      "History"
    <span>
      "More"
  <div className="more more--up" ref={"current":null}>
    <button aria-current="page" aria-expanded=false aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
      "More"
      <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
        <path d="M6 9.5l6 6 6-6">
  <div className="more" ref={"current":null}>
    <button aria-expanded=false aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
      "Other actions"
      <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
        <path d="M6 9.5l6 6 6-6">
  <div aria-live="polite" className="toast-host" role="status">
  <div aria-live="polite" className="toast-host" role="status">
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M5 12.5l4.5 4.5L19 7.5">
      "Saved"
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M12 4 2.8 20h18.4z">
        <path d="M12 10v4.2">
        <path d="M12 17.4v.1">
      "Offline"
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <circle cx="12" cy="12" r="9">
        <path d="M12 11.2V16">
        <path d="M12 8.2v.1">
      "Updated"
  <div aria-hidden="true" className="stack">
    <div className="skeleton skeleton--line">
    <div className="skeleton skeleton--line">
    <div className="skeleton skeleton--line-short">
  <div aria-hidden="true" className="stack">
    <div className="skeleton skeleton--title">
    <div className="skeleton skeleton--line-short">
  <div aria-hidden="true" className="stack">
  <div aria-label="Step 3 of 4" className="dots" role="img">
    <span className="dots__dot">
    <span className="dots__dot">
    <span className="dots__dot dots__dot--on">
    <span className="dots__dot">
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=0 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"0%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=0 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"0%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=25 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"25%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=100 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"100%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=100 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"100%"}>
  <span aria-hidden="true" className="avatar">
    "AB"
  <span aria-hidden="true" className="avatar">
    "A"
  <span aria-hidden="true" className="avatar">
    "?""
`;

exports[`preserves the rendered patient controls, decorative drawings and accessible states > open overflow navigation 1`] = `
"<main>
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M3 11.5 12 4l9 7.5">
    <path d="M5.5 10v10h13V10">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
    <path d="M8 3v18">
    <path d="M11.5 8.5h4">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 3l1.7 4.6L18.3 9l-4.6 1.4L12 15l-1.7-4.6L5.7 9l4.6-1.4L12 3z">
    <path d="M18.5 15l.8 2.2 2.2.8-2.2.8-.8 2.2-.8-2.2-2.2-.8 2.2-.8.8-2.2z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="9">
    <path d="M9.6 9.6a2.4 2.4 0 1 1 3.3 2.2c-.8.34-1.3.95-1.3 1.9">
    <path d="M11.6 16.6v.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M9 4.5H7A1.5 1.5 0 0 0 5.5 6v13A1.5 1.5 0 0 0 7 20.5h10a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 17 4.5h-2">
    <rect height="3" rx="1" width="6" x="9" y="3">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="18" cy="5.5" r="2.4">
    <circle cx="6" cy="12" r="2.4">
    <circle cx="18" cy="18.5" r="2.4">
    <path d="M8.2 10.8l7.6-4.1">
    <path d="M8.2 13.2l7.6 4.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M4 7h7">
    <path d="M16.5 7H20">
    <circle cx="13.5" cy="7" r="2.2">
    <path d="M4 17h3">
    <path d="M12.5 17H20">
    <circle cx="9.5" cy="17" r="2.2">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
    <path d="M9 11.6l2.1 2.1 4-4.2">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 3c1 3 4.2 4.6 4.2 8.2a4.7 4.7 0 0 1-9.4 0c0-1.6.6-3 1.5-4.2.4 1 1.1 1.6 2 1.8C10.4 7 11.5 5 12 3z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="4">
    <path d="M12 2.5V5">
    <path d="M12 19v2.5">
    <path d="M2.5 12H5">
    <path d="M19 12h2.5">
    <path d="M5 5l1.7 1.7">
    <path d="M17.3 17.3 19 19">
    <path d="M19 5l-1.7 1.7">
    <path d="M6.7 17.3 5 19">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M20 13.6A8 8 0 1 1 10.4 4a6.6 6.6 0 0 0 9.6 9.6z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M14.5 5.5 8 12l6.5 6.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M9.5 5.5 16 12l-6.5 6.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6 9.5l6 6 6-6">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M5 12.5l4.5 4.5L19 7.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6 6l12 12">
    <path d="M18 6 6 18">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M12 4 2.8 20h18.4z">
    <path d="M12 10v4.2">
    <path d="M12 17.4v.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="9">
    <path d="M12 11.2V16">
    <path d="M12 8.2v.1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <rect height="10.5" rx="2" width="10.5" x="9" y="9">
    <path d="M6.5 15H5.5A1.5 1.5 0 0 1 4 13.5v-8A1.5 1.5 0 0 1 5.5 4h8A1.5 1.5 0 0 1 15 5.5v1">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
    <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
    <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M9.5 4H6a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h3.5">
    <path d="M15.5 8l4 4-4 4">
    <path d="M19.5 12h-10">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M4 20h4.5L20 8.5a2.12 2.12 0 0 0-3-3L5.5 17 4 20z">
    <path d="M14.5 7l3 3">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M4.5 7h15">
    <path d="M9.5 7V4.5h5V7">
    <path d="M7 7l1 13h8l1-13">
    <path d="M10.3 10.5v6">
    <path d="M13.7 10.5v6">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="11" cy="11" r="6.5">
    <path d="M15.8 15.8 21 21">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M20 12a8 8 0 1 1-2.34-5.66">
    <path d="M20 4v4.5h-4.5">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <path d="M6 3.5h3l1.5 4-2 1.5a11.5 11.5 0 0 0 5 5l1.5-2 4 1.5v3a2 2 0 0 1-2 2A14 14 0 0 1 4 5.5a2 2 0 0 1 2-2z">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <rect height="11" rx="3" width="6" x="9" y="3">
    <path d="M5.5 11.5a6.5 6.5 0 0 0 13 0">
    <path d="M12 18v3">
  <svg aria-hidden="true" fill="none" focusable="false" height=18 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=18>
    <circle cx="12" cy="12" r="9">
    <path d="M10 8.5l6 3.5-6 3.5z">
  <svg aria-hidden="true" fill="none" focusable="false" height=27 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=27>
    <path d="M3 11.5 12 4l9 7.5">
    <path d="M5.5 10v10h13V10">
  <svg aria-hidden="true" focusable="false" height=30 viewBox="0 0 32 32" width=30>
    <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
    <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
    <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
    <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
  <svg aria-hidden="true" focusable="false" height=42 viewBox="0 0 32 32" width=42>
    <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
    <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
    <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
    <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
  <button className="btn" disabled=false type="button">
    "Save"
  <button className="btn btn--danger btn--small btn--block" disabled=false type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <path d="M4.5 7h15">
      <path d="M9.5 7V4.5h5V7">
      <path d="M7 7l1 13h8l1-13">
      <path d="M10.3 10.5v6">
      <path d="M13.7 10.5v6">
    "Remove"
  <button className="btn btn--ghost" disabled=false type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=17 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=17>
      <path d="M14.5 5.5 8 12l6.5 6.5">
    "Back"
  <button className="btn btn--quiet" disabled=true type="button">
    "Wait"
  <button aria-pressed=true className="chip" disabled=false type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <circle cx="12" cy="12" r="4">
      <path d="M12 2.5V5">
      <path d="M12 19v2.5">
      <path d="M2.5 12H5">
      <path d="M19 12h2.5">
      <path d="M5 5l1.7 1.7">
      <path d="M17.3 17.3 19 19">
      <path d="M19 5l-1.7 1.7">
      <path d="M6.7 17.3 5 19">
    "Walking"
    <span className="chip__check">
      <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
        <path d="M5 12.5l4.5 4.5L19 7.5">
  <button aria-pressed=false className="chip" disabled=true type="button">
    "Rest"
    <span className="chip__check">
      <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
        <path d="M5 12.5l4.5 4.5L19 7.5">
  <button className="chip" disabled=false type="button">
    "Insert prompt"
  <section className="card">
    <h2 className="card__title">
      "Ordinary"
    <p>
      "Body"
  <section className="card card--deep card--sensitive">
    <h2 className="card__title">
      "Private"
    <p>
      "Private writing"
  <section className="card card--danger">
    <p>
      "Remove account"
  <label className="field">
    <span className="field__label">
      "Name"
    <input className="input" type="text" value="Alice">
  <label className="field">
    <span className="field__label">
      "Password"
    <input autoComplete="current-password" className="input" placeholder="Password" type="password" value="secret">
  <label className="field">
    <span className="field__label">
      "Journal"
    <textarea className="textarea" rows=8 value="Two\\\\nlines">
  <label className="field">
    <span className="field__label">
      "Plan"
    <textarea className="textarea" disabled=true maxLength=200 placeholder="Start here" rows=4 value="Plan text">
  <p className="note" style={"whiteSpace":"pre-wrap"}>
    "Ordinary"
  <p className="note note--muted" role="status" style={"whiteSpace":"pre-wrap"}>
    "muted"
  <p className="note note--ok" role="status" style={"whiteSpace":"pre-wrap"}>
    "ok"
  <p className="note note--danger" role="status" style={"whiteSpace":"pre-wrap"}>
    "danger"
  <p className="note note--warn" role="status" style={"whiteSpace":"pre-wrap"}>
    "warn"
  <p className="note note--lead" role="status" style={"whiteSpace":"pre-wrap"}>
    "lead"
  <span className="pill-note">
    "Plain"
  <span className="pill-note pill-note--ok" role="status">
    <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
      <path d="M5 12.5l4.5 4.5L19 7.5">
    "Saved"
  <span className="pill-note pill-note--warn">
    <svg aria-hidden="true" fill="none" focusable="false" height=14 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=14>
      <path d="M12 4 2.8 20h18.4z">
      <path d="M12 10v4.2">
      <path d="M12 17.4v.1">
    "Queued"
  <span className="pill-note">
    "Muted"
  <div className="row row--between">
    <span className="note" style={"whiteSpace":"pre-wrap"}>
      "Consent on"
    <button aria-checked=true aria-label="Consent on" className="toggle" disabled=false role="switch" type="button">
  <div className="row row--between">
    <span className="note" style={"whiteSpace":"pre-wrap"}>
      "Consent off"
    <button aria-checked=false aria-label="Consent off" className="toggle" disabled=false role="switch" type="button">
  <div className="row row--between">
    <span className="note" style={"whiteSpace":"pre-wrap"}>
      "Unavailable"
    <button aria-checked=true aria-label="Unavailable" className="toggle" disabled=true role="switch" type="button">
  <label className="checkbox">
    <input checked=true className="checkbox__input" type="checkbox">
    <span aria-hidden="true" className="checkbox__box">
      <span className="checkbox__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span>
      "Agreed"
  <label className="checkbox">
    <input checked=false className="checkbox__input" type="checkbox">
    <span aria-hidden="true" className="checkbox__box">
      <span className="checkbox__check">
        <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
          <path d="M5 12.5l4.5 4.5L19 7.5">
    <span>
      "Unselected"
  <div aria-label="Language" className="segmented" role="radiogroup">
    <button aria-checked=false className="segmented__opt" role="radio" tabIndex=-1 type="button">
      "English"
    <button aria-checked=true className="segmented__opt" role="radio" tabIndex=0 type="button">
      "Español"
  <nav aria-label="Main navigation" className="nav-tabs">
    <button className="nav-tabs__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M3 11.5 12 4l9 7.5">
        <path d="M5.5 10v10h13V10">
      "Today"
    <button aria-current="page" className="nav-tabs__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
      "History"
  <nav aria-label="Main navigation" className="bottom-nav">
    <button aria-current="page" className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M3 11.5 12 4l9 7.5">
        <path d="M5.5 10v10h13V10">
      "Today"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
      "History"
    <span>
      "More"
  <div className="more more--up" ref={"current":null}>
    <button aria-expanded=true aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
      "More"
      <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
        <path d="M6 9.5l6 6 6-6">
    <div aria-label="More" className="more__menu" role="menu">
      <button aria-current="page" className="more__item" role="menuitem" type="button">
        <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
          <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
        "Plan"
      <button className="more__item more__item--danger" role="menuitem" type="button">
        "Delete"
      <button className="more__item" role="menuitem" type="button">
        "Plain"
  <div className="more" ref={"current":null}>
    <button aria-expanded=false aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
        <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
      "Other actions"
      <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
        <path d="M6 9.5l6 6 6-6">
  <div aria-live="polite" className="toast-host" role="status">
  <div aria-live="polite" className="toast-host" role="status">
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M5 12.5l4.5 4.5L19 7.5">
      "Saved"
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M12 4 2.8 20h18.4z">
        <path d="M12 10v4.2">
        <path d="M12 17.4v.1">
      "Offline"
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <circle cx="12" cy="12" r="9">
        <path d="M12 11.2V16">
        <path d="M12 8.2v.1">
      "Updated"
  <div aria-hidden="true" className="stack">
    <div className="skeleton skeleton--line">
    <div className="skeleton skeleton--line">
    <div className="skeleton skeleton--line-short">
  <div aria-hidden="true" className="stack">
    <div className="skeleton skeleton--title">
    <div className="skeleton skeleton--line-short">
  <div aria-hidden="true" className="stack">
  <div aria-label="Step 3 of 4" className="dots" role="img">
    <span className="dots__dot">
    <span className="dots__dot">
    <span className="dots__dot dots__dot--on">
    <span className="dots__dot">
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=0 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"0%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=0 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"0%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=25 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"25%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=100 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"100%"}>
  <div className="stack">
    <div aria-label="Completion" aria-valuemax=100 aria-valuemin=0 aria-valuenow=100 className="progress-track" role="progressbar">
      <div className="progress-fill" style={"width":"100%"}>
  <span aria-hidden="true" className="avatar">
    "AB"
  <span aria-hidden="true" className="avatar">
    "A"
  <span aria-hidden="true" className="avatar">
    "?""
`;
